metadata/force-app/main/default/objects/CustomName_HGQhK__c/CustomName_HGQhK__c.object-meta.xml
<CustomObject>
    <description>Description_bHqjB</description>
    <label>CustomLabel_tEWQL</label>
    <nameField>
        <label>CustomLabel_tEWQL</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_tEWQLs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>