metadata/force-app/main/default/objects/CustomName_HGQhK__c/fields/CustomField_kNWka__c.field-meta.xml
<CustomField>
    <fullName>CustomField_kNWka__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldgnFKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>